--- a/app.json
+++ b/app.json
@@ -16,6 +16,9 @@
     "ios": {
       "supportsTablet": true
     },
+    "experiments": {
+      "tsconfigPaths": true
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
